--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,4 +39,4 @@ jobs:
         aws-region: ap-northeast-2
 
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./demo.zip s3://$AWS_S3_BUCKET/
+      run: aws s3 cp --region ap-northeast-2 ./demo.zip s3://${{AWS_S3_BUCKET}}/
