--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,6 +27,12 @@ jobs:
     - name: Copy Jar
       run: cp ./build/libs/*.jar ./deploy
 
+    - name: Copy appspec.yml
+      run: cp appspec.yml ./deploy
+
+    - name: Copy scripts
+      run: cp ./scripts/*.sh ./deploy
+
     - name: Make zip file
       run: zip -r ./demo.zip ./deploy
       shell: bash
@@ -40,3 +46,12 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./demo.zip s3://${{ secrets.AWS_S3_BUCKET }}/
+
+    - name: Deploy
+      run: |
+        aws deploy create-deployment \
+        --application-name demo \
+        --deployment-group-name demo-deploy-group \
+        --file-exists-behavior OVERWRITE \
+        --s3-location bucket=${{ secrets.AWS_S3_BUCKET }},bundleType=zip,key=demo.zip \
+        --region ap-northeast-2
